# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  render.yaml
hexlet_code/: __init__.py
page_analyzer/: app.py
templates/: index.html  layout.html  show_url.html  urls.html
