[project]
name = "hexlet-code"
version = "0.1.0"
description = "Web application for testing"
requires-python = ">=3.12"
dependencies = [
   "flask>=3.0.0",
   "gunicorn>=21.0.0",
]


[build-system]
requires = ["flit-core<4"]
build-backend = "flit_core.buildapi"


[dependency-groups]
dev = [
   "ruff>=0.12.0",
]
