[project]
name = "hexlet-code"
version = "0.1.0"
description = "Web application for testing"
requires-python = ">=3.12"
dependencies = [
   "bootstrap-flask>=2.5.0",
   "flask>=3.0.0",
   "gunicorn>=21.0.0",
   "python-dotenv>=1.2.2",
   "psycopg2-binary>=2.9.0",
   "validators>=0.28.0",
   "requests>=2.31.0",
   "beautifulsoup4>=4.12.0",
]


[build-system]
requires = ["flit-core<4"]
build-backend = "flit_core.buildapi"


[dependency-groups]
dev = [
   "ruff>=0.12.0",
]
